deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
  labels:
    app: netbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbox
  template:
    metadata:
      labels:
        app: netbox
    spec:
      containers:
      - image: postgres:9.6-alpine
        name: postgres 
        ports:
        - containerPort: 5432
      - image: ninech/netbox:v2.3.0
        imagePullPolicy: Always
        name: netbox
        ports:
        - name: http
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 90
          periodSeconds: 10
        volumeMounts:
        - mountPath: /opt/netbox/netbox/static
          name: netbox-static-files
      - image: nginx:1.12-alpine
        imagePullPolicy: Always
        name: nginx
        volumeMounts:
        - mountPath: /opt/netbox/netbox/static
          name: netbox-static-files
        - mountPath: /etc/nginx/nginx.conf
          name: netbox-config
          subPath: nginx.conf
      volumes:
      - name: netbox-config
        configMap:
          name: netboxconfigmap
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: netbox-static-files
        emptyDir: {}
      restartPolicy: Always
status: {}
