nginx-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    frontend: nginx
spec:
  replicas: 1
  selector: 
    matchLabels:
      frontend: nginx
  template:
    metadata:
      labels:
        frontend: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.12-alpine
        ports:
        - containerPort: 80
        command: ["nginx"]
        args: ["-c", "/etc/netbox-nginx/nginx.conf","-g", "daemon off;"] 
        volumeMounts:
        - name: netbox-static-files
          mountPath: /opt/netbox/netbox/static
        - name: netbox-nginx-config
          mountPath: /etc/netbox-nginx 
      restartPolicy: Always
      volumes:
      - name: netbox-static-files
        persistentVolumeClaim:
          claimName: netbox-static-files
      - name: netbox-nginx-config
        configMap:
          name: nginx-conf
       
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    frontend: nginx
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    frontend: nginx
