postgres-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    backend: postgres
spec:
  replicas: 1
  selector: 
    matchLabels:
      backend: postgres
  template:
    metadata:
      labels:
        backend: postgres
    spec:
      containers:  
      - image: postgres:9.6-alpine
        name: postgres 
        ports:
        - containerPort: 5432
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    backend: postgres
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 5432
    targetPort: 5432
  selector:
    backend: postgres
