postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    backend: postgres
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 5432
    targetPort: 5432
  selector:
    backend: postgres
